# equation

./: CMakeLists.txt  Equation.cpp  Equation.h  EquationElement.h  Number.cpp  Number.h  Operator.cpp  Operator.h  Parenthesis.cpp  Parenthesis.h  main.cpp  readme.md
